// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AscendantHand (C3) > renders 0 playable hand snapshot 1`] = `
<DocumentFragment>
  <div
    style="width: 1920px; height: 1080px;"
  >
    <section
      data-testid="encounter-ascendant-hand"
      style="display: flex; flex-direction: column; gap: 8px; padding: 12px; background: var(--bg-surface);"
    >
      <div
        style="display: flex; justify-content: space-between; align-items: center;"
      >
        <div
          style="display: flex; align-items: center; gap: 6px; font-family: var(--font-display); font-size: 11px; letter-spacing: 0.16em; text-transform: uppercase; color: var(--text-tertiary);"
        >
          Your Hand
        </div>
        <div
          style="font-size: 10px; color: var(--text-muted);"
        >
          0 playable
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`AscendantHand (C3) > renders 3 playable hand snapshot 1`] = `
<DocumentFragment>
  <div
    style="width: 1920px; height: 1080px;"
  >
    <section
      data-testid="encounter-ascendant-hand"
      style="display: flex; flex-direction: column; gap: 8px; padding: 12px; background: var(--bg-surface);"
    >
      <div
        style="display: flex; justify-content: space-between; align-items: center;"
      >
        <div
          style="display: flex; align-items: center; gap: 6px; font-family: var(--font-display); font-size: 11px; letter-spacing: 0.16em; text-transform: uppercase; color: var(--text-tertiary);"
        >
          Your Hand
          <span
            data-testid="encounter-ascendant-hand-new-badge"
            style="font-size: 9px; letter-spacing: 0.08em; color: var(--accent-gold); border: 1px solid var(--accent-gold-dim); border-radius: 999px; padding: 1px 6px;"
          >
            +1 NEW
          </span>
        </div>
        <div
          style="font-size: 10px; color: var(--text-muted);"
        >
          3 playable
        </div>
      </div>
      <button
        data-testid="encounter-ascendant-card-a-playable"
        style="width: 100%; padding: 8px 10px; border-radius: 8px; border: 1px solid var(--border-accent); background: var(--bg-raised); text-align: left; cursor: pointer; opacity: 1;"
        type="button"
      >
        <div
          style="display: flex; justify-content: space-between; align-items: baseline; gap: 8px;"
        >
          <div
            style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
          >
            Card a
          </div>
          <div
            style="font-size: 10px; color: var(--text-muted); white-space: nowrap;"
          >
            2 ESS
          </div>
        </div>
        <div
          style="margin-top: 3px; font-size: 11px; line-height: 1.35; color: var(--text-tertiary);"
        >
          a divine nudge for this scene
        </div>
      </button>
      <button
        data-testid="encounter-ascendant-card-b-playable"
        style="width: 100%; padding: 8px 10px; border-radius: 8px; border: 1px solid var(--border-accent); background: var(--bg-raised); text-align: left; cursor: pointer; opacity: 1;"
        type="button"
      >
        <div
          style="display: flex; justify-content: space-between; align-items: baseline; gap: 8px;"
        >
          <div
            style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
          >
            Card b
          </div>
          <div
            style="font-size: 10px; color: var(--text-muted); white-space: nowrap;"
          >
            2 ESS
          </div>
        </div>
        <div
          style="margin-top: 3px; font-size: 11px; line-height: 1.35; color: var(--text-tertiary);"
        >
          a divine nudge for this scene
        </div>
      </button>
      <button
        data-testid="encounter-ascendant-card-c-playable"
        style="width: 100%; padding: 8px 10px; border-radius: 8px; border: 1px solid var(--border-accent); background: var(--bg-raised); text-align: left; cursor: pointer; opacity: 1;"
        type="button"
      >
        <div
          style="display: flex; justify-content: space-between; align-items: baseline; gap: 8px;"
        >
          <div
            style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
          >
            Card c
          </div>
          <div
            style="font-size: 10px; color: var(--text-muted); white-space: nowrap;"
          >
            2 ESS
          </div>
        </div>
        <div
          style="margin-top: 3px; font-size: 11px; line-height: 1.35; color: var(--text-tertiary);"
        >
          a divine nudge for this scene
        </div>
      </button>
    </section>
  </div>
</DocumentFragment>
`;

exports[`AscendantHand (C3) > renders 7+ cards with disclosure and dimmed prereq snapshot 1`] = `
<DocumentFragment>
  <div
    style="width: 1920px; height: 1080px;"
  >
    <section
      data-testid="encounter-ascendant-hand"
      style="display: flex; flex-direction: column; gap: 8px; padding: 12px; background: var(--bg-surface);"
    >
      <div
        style="display: flex; justify-content: space-between; align-items: center;"
      >
        <div
          style="display: flex; align-items: center; gap: 6px; font-family: var(--font-display); font-size: 11px; letter-spacing: 0.16em; text-transform: uppercase; color: var(--text-tertiary);"
        >
          Your Hand
        </div>
        <div
          style="font-size: 10px; color: var(--text-muted);"
        >
          5 playable
        </div>
      </div>
      <button
        data-testid="encounter-ascendant-card-a-playable"
        style="width: 100%; padding: 8px 10px; border-radius: 8px; border: 1px solid var(--border-accent); background: var(--bg-raised); text-align: left; cursor: pointer; opacity: 1;"
        type="button"
      >
        <div
          style="display: flex; justify-content: space-between; align-items: baseline; gap: 8px;"
        >
          <div
            style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
          >
            Card a
          </div>
          <div
            style="font-size: 10px; color: var(--text-muted); white-space: nowrap;"
          >
            2 ESS
          </div>
        </div>
        <div
          style="margin-top: 3px; font-size: 11px; line-height: 1.35; color: var(--text-tertiary);"
        >
          a divine nudge for this scene
        </div>
      </button>
      <button
        data-testid="encounter-ascendant-card-b-playable"
        style="width: 100%; padding: 8px 10px; border-radius: 8px; border: 1px solid var(--border-accent); background: var(--bg-raised); text-align: left; cursor: pointer; opacity: 1;"
        type="button"
      >
        <div
          style="display: flex; justify-content: space-between; align-items: baseline; gap: 8px;"
        >
          <div
            style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
          >
            Card b
          </div>
          <div
            style="font-size: 10px; color: var(--text-muted); white-space: nowrap;"
          >
            2 ESS
          </div>
        </div>
        <div
          style="margin-top: 3px; font-size: 11px; line-height: 1.35; color: var(--text-tertiary);"
        >
          a divine nudge for this scene
        </div>
      </button>
      <button
        data-testid="encounter-ascendant-card-c-playable"
        style="width: 100%; padding: 8px 10px; border-radius: 8px; border: 1px solid var(--border-accent); background: var(--bg-raised); text-align: left; cursor: pointer; opacity: 1;"
        type="button"
      >
        <div
          style="display: flex; justify-content: space-between; align-items: baseline; gap: 8px;"
        >
          <div
            style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
          >
            Card c
          </div>
          <div
            style="font-size: 10px; color: var(--text-muted); white-space: nowrap;"
          >
            2 ESS
          </div>
        </div>
        <div
          style="margin-top: 3px; font-size: 11px; line-height: 1.35; color: var(--text-tertiary);"
        >
          a divine nudge for this scene
        </div>
      </button>
      <button
        data-testid="encounter-ascendant-hand-disclosure"
        style="margin-top: 2px; align-self: flex-start; border: medium; background: transparent; color: var(--text-secondary); font-size: 11px; cursor: pointer;"
        type="button"
      >
        + 4 more
      </button>
    </section>
  </div>
</DocumentFragment>
`;
